plugins/kotlin/idea/tests/testData/checker/codeFragments/contextElementAsStatement.kt.fragment.k2
a + <error descr="[UNRESOLVED_REFERENCE]">c</error>